# csad2526ki405kohuttaras15

./: CMakeLists.txt  README.md  ci.bat  ci.sh  copilot_history.txt  copilot_history2.txt  copilot_history3.txt  copilot_history4.txt  copilot_history5.txt  math_operations.cpp  math_operations.h
.github/workflows/: ci.yml
tests/: unit_tests.cpp
